--- a/ccatcracker/templates/guitar/guitar.html
+++ b/ccatcracker/templates/guitar/guitar.html
@@ -4,6 +4,7 @@
 <!-- Main -->
 {% block content %}
 <style>
+
 h2{
 
     
@@ -128,7 +129,27 @@ padding-bottom: 50px;
       </div>
     </div>
   </div>
+</section> <br> <br>
 </section>
+<section id="work" class="bg-dark text-white text-center">
+  <form  method="POST" action="{% url 'subscribe' %}">
+    {% csrf_token %}
+    <div class="container">
+      <h3> <strong>Subscribe to our Newsletter</strong> </h3>
+      <p>Any latest release song chords tabs you will get notified.</p>
+    </div>
+  
+    
+    
+      <input type="text" placeholder="Email address" name="email" required style="color: black; width: 280px;">
+      <br> <br>
+  
+    <div class="container">
+      <input type="submit" value="Subscribe" style="color: green;">
+    </div>
+  </form>
+</section>
+
 
 <section id="listings" class="py-4">
 <div class="container">
@@ -160,8 +181,28 @@ padding-bottom: 50px;
       </div>
       {% endif %}
     </section> 
+    <br> <br>
     
+  </section>
+  <section id="work" class="bg-dark text-white text-center">
+    <form  method="POST" action="{% url 'subscribe' %}">
+      {% csrf_token %}
+      <div class="container">
+        <h3> <strong>Subscribe to our Newsletter</strong> </h3>
+        <p>Any latest release song chords tabs you will get notified.</p>
+      </div>
+    
+      
+      
+        <input type="text" placeholder="Email address" name="email" required style="color: black; width: 280px;">
+        <br> <br>
+    
+      <div class="container">
+        <input type="submit" value="Subscribe" style="color: green;">
+      </div>
+    </form>
+  </section>
+  
 
 
-</section>
 {% endblock %}
