--- a/ccatcracker/templates/partials/_topbar.html
+++ b/ccatcracker/templates/partials/_topbar.html
@@ -13,7 +13,7 @@
             <a href="#">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/notations">
               <i class="fab fa-facebook"></i>
             </a>
             <a href="#">
