--- a/ccatcracker/templates/music/main.html
+++ b/ccatcracker/templates/music/main.html
@@ -66,7 +66,7 @@ form.example input[type=text] {
 				<button type="submit"><i class="fa fa-search"></i></button>
 			  </form>
 			  <p id="search-results"  style="background:black;">
-
+				
 
 				</p>
 			  <br> <br>
@@ -97,13 +97,20 @@ form.example input[type=text] {
 					</div>
 				  <hr>
 			</div>
+			
 		</div>
 	</div>
 
 			{% endfor %}
+			
+			<iframe width="420" height="345"  src="https://www.youtube.com/embed/tgbNymZ7vqY">
+			</iframe>&nbsp;&nbsp;&nbsp;&nbsp;
+			<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+			</iframe>
 
 		  {% else %}
 		  <div class="col-md-12">
+			  
 			<p>No Listings Available</p>
 		  </div>
 		  {% endif %}
