--- a/ccatcracker/templates/music/sargam.html
+++ b/ccatcracker/templates/music/sargam.html
@@ -173,6 +173,8 @@ form.example input[type=text] {
 				<br>
 			
 			</p> <br>
+			<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+			</iframe> 
 			<h2>How to Play Flute With a Metronome</h2>
 			<p style="color: #f1f1f1; font-size:15.5px;">
 
