--- a/ccatcracker/templates/music/songs.html
+++ b/ccatcracker/templates/music/songs.html
@@ -65,11 +65,26 @@
    </div>
 </section>
 <section id="about" class="py-4" style="background-color:black">
-   <div class="container" style="background-color:white;">
-      <h4 >
-         <div class="fb-page"  data-href="https://www.facebook.com/notations/" data-tabs="timeline" data-width="" data-height="70" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="false">
+   <div class="container" style="background-color:grey;">
+   <form  method="POST" action="{% url 'subscribes' %}">
+      {% csrf_token %}
+         <br>
+         <div class="fb-page" data-href="https://www.facebook.com/notations/" data-tabs="timeline" data-width="" data-height="80" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false">
             <blockquote cite="https://www.facebook.com/notations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/notations/">Notation &amp; sargams Hindi songs</a></blockquote>
          </div>
+         <h3 style="color: #f1f1f1;"> <strong>Subscribe to our Newsletter</strong> </h3>
+         <p style="color: #f1f1f1;">Any latest release song notations sargams you will get notified.</p>
+      
+      <input type="text" placeholder="Email address" name="email" required style="color: black; width: 280px;">
+      
+     
+         <input type="submit" value="Subscribe" style="color: green;">
+      </div>
+   </form>
+</section>
+<section id="about" class="py-4" style="background-color:black">
+   <div class="container" style="background-color:white;">
+      <h4 >
          <br> <br>
          <strong>{{songs.0.song_names}} </strong>
       </h4>
@@ -82,29 +97,12 @@
          </p>
       </h5>
       {% endfor %}
-      {% endif %} 
-      <div id="fb-root"></div>
+      {% endif %}  <br> <br>
+      <iframe width="340" height="245"  src={{songs.0.youtube}}>
+      </iframe>&nbsp;&nbsp;&nbsp;&nbsp;
+     
       
    </div>
-</section>
-<br>
-<section id="work" class="bg-dark text-white text-center">
-   <form  method="POST" action="{% url 'subscribes' %}">
-      {% csrf_token %}
-      <div class="container">
-		<div class="fb-page"  data-href="https://www.facebook.com/notations/" data-tabs="timeline" data-width="" data-height="70" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="false">
-            <blockquote cite="https://www.facebook.com/notations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/notations/">Notation &amp; sargams Hindi songs</a></blockquote>
-         </div>
-          
-         <h3> <strong>Subscribe to our Newsletter</strong> </h3>
-         <p>Any latest release song notation  sargams you will get notified.</p>
-      </div>
-      <input type="text" placeholder="Email address" name="email" required style="color: black; width: 280px;">
-      <br> <br>
-      <div class="container">
-         <input type="submit" value="Subscribe" style="color: green;">
-      </div>
-   </form>
 </section>
 <section id="about" class="py-4" style="background-color:black">
    <div class="container" style="background-color:grey;">
@@ -123,7 +121,12 @@
             </div>
          </div>
       </div>
+
+   
       {% endfor %}
+      
+    
+      
       {% else %}
       <div class="col-md-12">
          <p>No Listings Available</p>
@@ -132,19 +135,21 @@
    </div>
    </div>
 </section>
-<br>
-<br>
-<section id="work" class="bg-dark text-white text-center">
-  
+
+<section id="about" class="py-4" style="background-color:black">
+   <div class="container" style="background-color:grey;">
    <form  method="POST" action="{% url 'subscribes' %}">
       {% csrf_token %}
-      <div class="container">
-         <h3> <strong>Subscribe to our Newsletter</strong> </h3>
-         <p>Any latest release song notation  sargams you will get notified.</p>
-      </div>
+         <br>
+         <div class="fb-page" data-href="https://www.facebook.com/notations/" data-tabs="timeline" data-width="" data-height="80" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false">
+            <blockquote cite="https://www.facebook.com/notations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/notations/">Notation &amp; sargams Hindi songs</a></blockquote>
+         </div>
+         <h3 style="color: #f1f1f1;"> <strong>Subscribe to our Newsletter</strong> </h3>
+         <p style="color: #f1f1f1;">Any latest release song notations sargams you will get notified.</p>
+      
       <input type="text" placeholder="Email address" name="email" required style="color: black; width: 280px;">
-      <br> <br>
-      <div class="container">
+      
+     
          <input type="submit" value="Subscribe" style="color: green;">
       </div>
    </form>
