--- a/ccatcracker/templates/music/naina.html
+++ b/ccatcracker/templates/music/naina.html
@@ -74,7 +74,6 @@
       </style>
       <section id="about" class="py-4" style="background-color:black">
          <div class="container" style="background-color:white;">
-          
             <h2 style="color: white;">Search your Faviourite Songs</h2>
             <form class="example" method="post" action="{% url 'song_list' %}">
                {% csrf_token %}
@@ -88,25 +87,25 @@
             <br>
          </div>
       </section>
-      <br>
-      <section id="work" class="bg-dark text-white text-center">
+      <section id="about" class="py-4" style="background-color:black">
+         <div class="container" style="background-color:grey;">
          <form  method="POST" action="{% url 'subscribes' %}">
             {% csrf_token %}
-            <div class="container">
                <br>
                <div class="fb-page" data-href="https://www.facebook.com/notations/" data-tabs="timeline" data-width="" data-height="80" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false">
                   <blockquote cite="https://www.facebook.com/notations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/notations/">Notation &amp; sargams Hindi songs</a></blockquote>
                </div>
-               <h3> <strong>Subscribe to our Newsletter</strong> </h3>
-               <p>Any latest release song notations sargams you will get notified.</p>
-            </div>
+               <h3 style="color: #f1f1f1;"> <strong>Subscribe to our Newsletter</strong> </h3>
+               <p style="color: #f1f1f1;">Any latest release song notations sargams you will get notified.</p>
+            
             <input type="text" placeholder="Email address" name="email" required style="color: black; width: 280px;">
-            <br> <br>
-            <div class="container">
+            
+           
                <input type="submit" value="Subscribe" style="color: green;">
             </div>
          </form>
       </section>
+    
       <section id="about" class="py-4" style="background-color:black">
          <div class="container" style="background-color:white;">
             <h4 >
@@ -123,15 +122,12 @@
             {% endfor %}
             {% endif %}  
             <br> <br>
-            <div class="fb-page" data-href="https://www.facebook.com/notations/" data-tabs="timeline" data-width="" data-height="80" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false">
-               <blockquote cite="https://www.facebook.com/notations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/notations/">Notation &amp; sargams Hindi songs</a></blockquote>
-            </div>
-            <br> <br>
+            <iframe width="340" height="245"  src={{songs.0.youtube}}>
+            </iframe>&nbsp;&nbsp;&nbsp;&nbsp;
          </div>
       </section>
       <section id="about" class="py-4" style="background-color:black">
          <div class="container" style="background-color:grey;">
-           
             <br> <br>
             <h2 style="color: white;">You may also like this :</h2>
             {% if lists %}
@@ -157,18 +153,20 @@
          </div>
          </div>
       </section>
-      <br> <br>
-      <section id="work" class="bg-dark text-white text-center">
+      <section id="about" class="py-4" style="background-color:black">
+         <div class="container" style="background-color:grey;">
          <form  method="POST" action="{% url 'subscribes' %}">
             {% csrf_token %}
-            <div class="container">
-              
-               <h3> <strong>Subscribe to our Newsletter</strong> </h3>
-               <p>Any latest release song notations sargams you will get notified.</p>
-            </div>
+               <br>
+               <div class="fb-page" data-href="https://www.facebook.com/notations/" data-tabs="timeline" data-width="" data-height="80" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false">
+                  <blockquote cite="https://www.facebook.com/notations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/notations/">Notation &amp; sargams Hindi songs</a></blockquote>
+               </div>
+               <h3 style="color: #f1f1f1;"> <strong>Subscribe to our Newsletter</strong> </h3>
+               <p style="color: #f1f1f1;">Any latest release song notations sargams you will get notified.</p>
+            
             <input type="text" placeholder="Email address" name="email" required style="color: black; width: 280px;">
-            <br> <br>
-            <div class="container">
+            
+           
                <input type="submit" value="Subscribe" style="color: green;">
             </div>
          </form>
