--- a/ccatcracker/templates/music/naina.html
+++ b/ccatcracker/templates/music/naina.html
@@ -122,8 +122,15 @@
             {% endfor %}
             {% endif %}  
             <br> <br>
-            <iframe width="340" height="245"  src={{songs.0.youtube}}>
-            </iframe>&nbsp;&nbsp;&nbsp;&nbsp;
+            <div class="col-md-6 col-lg-4 mb-4">
+               <div class="card listing-preview">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/IYxuT60Tmh0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               
+                  </div>
+               </div>
+
+
+
          </div>
       </section>
       <section id="about" class="py-4" style="background-color:black">
